# lydia-onboarding

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
goserver/: go.mod  main.go
goserver/api/: api.go  api_test.go  converters.go  types.go
goserver/protogen/: helloworld.pb.go  helloworld_grpc.pb.go
goserver/protogen/bike/: bike.pb.go  bike_grpc.pb.go
goserver/protogen/helloworld/: helloworld.pb.go  helloworld_grpc.pb.go
protos/: bike.proto  helloworld.proto
python_client/: grpc_test.py  hello.py  main.py  pyproject.toml
python_client/protogen/: bike_pb2.py  bike_pb2.pyi  bike_pb2_grpc.py  helloworld_pb2.py  helloworld_pb2.pyi  helloworld_pb2_grpc.py
web-client/: .pnp.cjs  index.html  package.json
web-client/src/: App.css  App.jsx  Card.css  FeedCard.jsx  StationCard.jsx  socket.js
